Fix modal message on iOS

--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -10,11 +10,9 @@ img 					{-webkit-touch-callout:none}
 a 						{text-decoration:none}
 #history				{background: url(../images/noise.png) repeat top left,-webkit-linear-gradient(top, #2860b7 0%,#3d8af2 100%)}
 #history section 		{min-height:357px;padding-bottom:20px;border-bottom:1px solid #2E9AFF;overflow:scrollbar}
-#modalMessage {display:block;visibility:hidden;opacity:0;position:absolute;width:200px;height:70px;top:50%;left:50%;margin-left:-100px;margin-top:-35px;background: rgba(0,0,0,.4);border-radius:7px;box-shadow:0px 2px 3px rgba(0,0,0,.6);border:1px solid #336299;
-               -webkit-transition: opacity .2s ease-out, visibility .001s linear .2s;
-}
+#modalMessage {display:block;opacity:0;position:absolute;z-index:50;width:200px;height:70px;top:45%;left:-100%;margin-left:-100px;margin-top:-35px;background: rgba(0,0,0,.4);border-radius:7px;box-shadow:0px 2px 3px rgba(0,0,0,.6);border:1px solid #336299;-webkit-transform: translate3d(0,-30%,0);-webkit-transition:-webkit-transform .25s ease-out,opacity .25s ease-out,left 0s linear .2s;}
+#modalMessage.displayed {opacity:1;left:50%;-webkit-transform:translate3d(0,0,0);-webkit-transition:-webkit-transform .075s ease-in,opacity .075s ease-in;}
 #modalMessage p {margin:auto;text-align:center;height:80px;line-height:70px;text-shadow:0 -1px rgba(0,0,0,.7);color:#ffc;}
-#modalMessage.displayed {display:block;visibility:visible;opacity:1; -webkit-transition: opacity .05s cubic-bezier(0, 0, .99, .36), visibility .001s linear;}
 #myNav					{border-top:1px solid #173683;padding-top:19px;height:63px;background: url(../images/bg-nav.png) repeat-x top center,-webkit-linear-gradient(top, #397bc9 0%,#205cc3 100%)}
 #myNav a 			 	{background: -webkit-linear-gradient(top,#0c2244 0%,#194b9b 100%)}
 #open,#open span		{width:205px}
